--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -31,9 +31,11 @@ runs:
         git config --list
 
         git fetch --all --tags --force
-        # echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}main${BLANK}"
+        echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}main${BLANK}"
+        git branch --set-upstream-to origin/main
         # git checkout --track origin/main
-        # echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}$GITHUB_REF_NAME${BLANK}"
+        echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}$GITHUB_REF_NAME${BLANK}"
+        git branch --set-upstream-to origin/$GITHUB_REF_NAME
         # git checkout --track origin/$GITHUB_REF_NAME
 
         # Defaulting to maj.min.0
@@ -62,7 +64,7 @@ runs:
               last_tag="$tmp_tag"
               echo -e "${CYAN}[ INFO ] Tag ${YELLOW}$last_tag${CYAN} found at commit ${YELLOW}$commit${BLANK}"
             else
-              echo -e "${RED}[ ERROR ] Your current commit ${PURPLE}$GITHUB_SHA${RED} is actually your last tag ${PURPLE}$tmp_tag${RED}. Cannot perform tag on a commit already tagged.${BLANK}"
+              echo -e "${RED}[ ERROR ] Your current commit ${PURPLE}$GITHUB_SHA${RED} is actually your lagit ast tag ${PURPLE}$tmp_tag${RED}. Cannot perform tag on a commit already tagged.${BLANK}"
               exit 1
             fi
           fi
