--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -35,8 +35,8 @@ runs:
         git branch --set-upstream-to origin/main
         # git checkout --track origin/main
         echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}$GITHUB_REF_NAME${BLANK}"
-        git branch --set-upstream-to origin/$GITHUB_REF_NAME
-        # git checkout --track origin/$GITHUB_REF_NAME
+        # git branch --set-upstream-to origin/$GITHUB_REF_NAME
+        git checkout --track origin/$GITHUB_REF_NAME
 
         # Defaulting to maj.min.0
         proj_version="v${BASH_REMATCH[2]}.0"
