--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -220,6 +220,8 @@ jobs:
     - name: Clone code
       id: clone
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Set version
       id: set-version
       uses: ixxeL-actions/workflows/.github/actions/set-version@main
