--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -31,12 +31,11 @@ runs:
         git config --list
 
         git fetch --all --tags --force
+        git pull origin $GITHUB_REF_NAME
         echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}$GITHUB_REF_NAME${BLANK}"
         git branch --set-upstream-to origin/$GITHUB_REF_NAME
-        git fetch --all --tags --force
         echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}main${BLANK}"
         git checkout --track origin/main
-        git fetch --all --tags --force
 
         # Defaulting to maj.min.0
         proj_version="v${BASH_REMATCH[2]}.0"
