--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -32,7 +32,7 @@ runs:
 
         git fetch --all --tags --force
         git pull origin $GITHUB_REF_NAME
-        git pull origin main
+        git pull --no-rebase origin main
         git fetch --all --tags --force
         echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}$GITHUB_REF_NAME${BLANK}"
         git branch --set-upstream-to origin/$GITHUB_REF_NAME
