fixing set version

--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -30,10 +30,10 @@ runs:
         git config --global http.sslVerify ${{ inputs.tls-verify }}
         git config --list
 
-        git fetch --all --tags --force
         git fetch origin main:main
-        git fetch --all --tags --force origin main:main
-        git fetch --all --tags --force origin $GITHUB_REF_NAME:$GITHUB_REF_NAME
+        git fetch --tags --force origin main:main
+        git fetch origin $GITHUB_REF_NAME:$GITHUB_REF_NAME
+        git fetch --tags --force origin $GITHUB_REF_NAME:$GITHUB_REF_NAME
         echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}$GITHUB_REF_NAME${BLANK}"
         git branch --set-upstream-to origin/$GITHUB_REF_NAME
         echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}main${BLANK}"
