--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -40,7 +40,7 @@ runs:
         git checkout --track origin/$GITHUB_REF_NAME
         # git branch --set-upstream-to origin/$GITHUB_REF_NAME
 
-
+        git tag --list
         # Defaulting to maj.min.0
         proj_version="v${BASH_REMATCH[2]}.0"
         proj_short_version=$proj_version
