--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -32,13 +32,14 @@ runs:
 
         git fetch origin main:main
         git fetch --tags --force origin main:main
-        git fetch origin $GITHUB_REF_NAME:$GITHUB_REF_NAME
-        git fetch --tags --force origin $GITHUB_REF_NAME:$GITHUB_REF_NAME
-        echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}main${BLANK}"
-        git checkout --track origin/main
-        echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}$GITHUB_REF_NAME${BLANK}"
-        git checkout --track origin/$GITHUB_REF_NAME
-        # git branch --set-upstream-to origin/$GITHUB_REF_NAME
+        # git fetch origin $GITHUB_REF_NAME:$GITHUB_REF_NAME
+        # git fetch --tags --force origin $GITHUB_REF_NAME:$GITHUB_REF_NAME
+        # echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}main${BLANK}"
+        # git branch --set-upstream-to origin/main
+        # # git checkout --track origin/main
+        # echo -e "${CYAN}[ INFO ] Checkout track ${PURPLE}$GITHUB_REF_NAME${BLANK}"
+        # git checkout --track origin/$GITHUB_REF_NAME
+        # # git branch --set-upstream-to origin/$GITHUB_REF_NAME
 
         git tag --list
         # Defaulting to maj.min.0
