--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -70,7 +70,7 @@ runs:
             echo -e "${CYAN}[ INFO ] Tmp tag not empty${BLANK}"
             if [ "$GITHUB_SHA" != "$commit" ]
             then
-              if ! [[ "$tmp_tag" =~ ^${COMPONENT}-v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
+              if [[ "$tmp_tag" =~ ^${COMPONENT}-v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
               then
                 last_tag="$tmp_tag"
                 echo -e "${CYAN}[ INFO ] Tag ${YELLOW}$last_tag${CYAN} found at commit ${YELLOW}$commit${BLANK}"
@@ -85,7 +85,7 @@ runs:
         if [ "$last_tag" != '' ]
         then
           # Found previous tag, increment patch digit
-          if ! [[ "$last_tag" =~ ^v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
+          if ! [[ "$last_tag" =~ ^.*v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
           then
             echo -e "${RED}[ ERROR ] > Last tag ${PURPLE}$last_tag${RED} is not in Semantic Versioning (vMaj.Min.Patch ie: v1.0.0). Please perform manual correction${BLANK}"
             exit 1
