--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -230,50 +230,49 @@ jobs:
       uses: ixxeL-actions/workflows/.github/actions/set-version@main
       with:
         component: ${{ inputs.component }}
-    # - name: Buildkit build
-    #   id: buildkit-build
-    #   uses: ixxeL-actions/workflows/.github/actions/buildkit@main
-    #   with:
-    #     workingdir: ${{ inputs.workingdir }}
-    #     img-name: ${{ inputs.img-name }}
-    #     tag: ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}
-    #     target-dir: ${{ inputs.target-dir }}
-    #     github-api-rest-token: ${{ secrets.github-api-rest-token }}
-    #     github-api-auth: ${{ inputs.github-api-auth }}
-    #     dockerfile-frontend: ${{ inputs.dockerfile-frontend }}
-    #     dockerfile-name: ${{ inputs.dockerfile-name }}
-    #     build-arg: ${{ inputs.build-arg }}
-    #     push: ${{ steps.setvars.outputs.AUTO_PUSH }}
-    #     caching: ${{ inputs.caching }}
-    #     cache-registry: ${{ inputs.cache-registry }}
-    #     force-login: ${{ inputs.force-login }}
-    #     login-binary: ${{ inputs.login-binary }}
-    #     custom-login: ${{ inputs.custom-login }}
-    #     login-registry-user: ${{ inputs.login-registry-user }}
-    #     login-registry-pwd: ${{ inputs.login-registry-pwd }}
-    #     docker-hub-login: ${{ inputs.docker-hub-login }}
-    #     docker-io-user: ${{ inputs.docker-io-user }}
-    #     docker-io-pwd: ${{ secrets.docker-io-pwd }}
-    #     oci-worker-snapshotter: ${{ inputs.oci-worker-snapshotter }}
-    # - name: Grype scan
-    #   id: grype-scan
-    #   uses: ixxeL-actions/workflows/.github/actions/grype@main
-    #   continue-on-error: true
-    #   with:
-    #     image-ref: ${{ inputs.target-dir }}/${{ inputs.img-name }}.tar
-    #     transport: ${{ inputs.transport }}
-    #     fail-on: ${{ inputs.fail-on }}
-    #     output: ${{ inputs.output }}
-    #     scope: ${{ inputs.scope }}
-    #     template: ${{ inputs.template }}
-    #     verbose: ${{ inputs.verbose }}
+    - name: Buildkit build
+      id: buildkit-build
+      uses: ixxeL-actions/workflows/.github/actions/buildkit@main
+      with:
+        workingdir: ${{ inputs.workingdir }}
+        img-name: ${{ inputs.img-name }}
+        tag: ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}
+        target-dir: ${{ inputs.target-dir }}
+        github-api-rest-token: ${{ secrets.github-api-rest-token }}
+        github-api-auth: ${{ inputs.github-api-auth }}
+        dockerfile-frontend: ${{ inputs.dockerfile-frontend }}
+        dockerfile-name: ${{ inputs.dockerfile-name }}
+        build-arg: ${{ inputs.build-arg }}
+        push: ${{ steps.setvars.outputs.AUTO_PUSH }}
+        caching: ${{ inputs.caching }}
+        cache-registry: ${{ inputs.cache-registry }}
+        force-login: ${{ inputs.force-login }}
+        login-binary: ${{ inputs.login-binary }}
+        custom-login: ${{ inputs.custom-login }}
+        login-registry-user: ${{ inputs.login-registry-user }}
+        login-registry-pwd: ${{ inputs.login-registry-pwd }}
+        docker-hub-login: ${{ inputs.docker-hub-login }}
+        docker-io-user: ${{ inputs.docker-io-user }}
+        docker-io-pwd: ${{ secrets.docker-io-pwd }}
+        oci-worker-snapshotter: ${{ inputs.oci-worker-snapshotter }}
+    - name: Grype scan
+      id: grype-scan
+      uses: ixxeL-actions/workflows/.github/actions/grype@main
+      continue-on-error: true
+      with:
+        image-ref: ${{ inputs.target-dir }}/${{ inputs.img-name }}.tar
+        transport: ${{ inputs.transport }}
+        fail-on: ${{ inputs.fail-on }}
+        output: ${{ inputs.output }}
+        scope: ${{ inputs.scope }}
+        template: ${{ inputs.template }}
+        verbose: ${{ inputs.verbose }}
     - name: git tag
       id: git-tag
       if: contains( github.ref, 'release' ) || contains( github.base_ref, 'release' )
       uses: ixxeL-actions/workflows/.github/actions/git-tag@main
       with:
-        # git-token: ${{ secrets.git-token }}
-        tag-msg: 'test'
+        tag-msg: 'CI release of ${{ inputs.component }} version ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}'
         tag-value: ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}
         git-workdir: ${{ inputs.git-workdir }}
         push-option: ${{ inputs.push-option }}
