--- a/.github/actions/buildkit/action.yaml
+++ b/.github/actions/buildkit/action.yaml
@@ -9,6 +9,9 @@ inputs:
   tag:
     description: tagged name to apply to the built image
     required: true
+  component:
+    required: false
+    default: build
   target-dir:
     required: false
     default: artefacts
@@ -194,8 +197,8 @@ runs:
         then
           echo -e "${CYAN}[ INFO ] > Push mode on. Pushing image ${PURPLE}${{ inputs.img-name }}:${{ inputs.tag}}${YELLOW} to registry ${{ inputs.cache-registry }}${BLANK}"
           buildctl-daemonless.sh build \
-                                --import-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache \
-                                --export-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache,mode=max,push=true \
+                                --import-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:${{ inputs.component }}-cache \
+                                --export-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:${{ inputs.component }}-cache,mode=max,push=true \
                                 --frontend=${{ inputs.dockerfile-frontend }} \
                                 --local context=${{ inputs.workingdir }} \
                                 --local dockerfile=${{ inputs.workingdir }} \
@@ -207,8 +210,8 @@ runs:
         else
           echo -e "${CYAN}[ INFO ] > Tarball mode on. Compressing image ${PURPLE}${{ inputs.img-name }}:${{ inputs.tag}}${YELLOW} to tarball ${{ inputs.target-dir }}/${{ inputs.img-name }}.tar${BLANK}"
           buildctl-daemonless.sh build \
-                                --import-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache \
-                                --export-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:cache,mode=max,push=true \
+                                --import-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:${{ inputs.component }}-cache \
+                                --export-cache type=registry,ref=${{ inputs.cache-registry }}/${{ inputs.img-name }}:${{ inputs.component }}-cache,mode=max,push=true \
                                 --frontend=${{ inputs.dockerfile-frontend }} \
                                 --local context=${{ inputs.workingdir }} \
                                 --local dockerfile=${{ inputs.workingdir }} \
