--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -237,6 +237,7 @@ jobs:
         workingdir: ${{ inputs.workingdir }}
         img-name: ${{ inputs.img-name }}
         tag: ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}
+        component: ${{ inputs.component }}
         target-dir: ${{ inputs.target-dir }}
         github-api-rest-token: ${{ secrets.github-api-rest-token }}
         github-api-auth: ${{ inputs.github-api-auth }}
