refined cache tag

--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -35,6 +35,7 @@ on:
         type: string
       component:
         required: true
+        default: build
         type: string
     # Checkov
       artefact:
