--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -66,24 +66,27 @@ runs:
         for commit in $cherry
         do
           echo -e "${CYAN}[ INFO ] Analyzing commit ${YELLOW}$commit${BLANK}"
-          tmp_tag=$(git tag --points-at $commit)
-          if [ "$tmp_tag" != '' ]
+          tmp_tags=$(git tag --points-at $commit)
+          if [ "$tmp_tags" != '' ]
           then
-            echo -e "${CYAN}[ INFO ] Tmp tag ${YELLOW}$tmp_tag${CYAN} for commit ${YELLOW}$commit${CYAN} not empty${BLANK}"
-            if [ "$GITHUB_SHA" != "$commit" ]
-            then
-              if [[ "$tmp_tag" =~ ^${COMPONENT}-v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
+            for tmp_tag in $tmp_tags
+            do
+              echo -e "${CYAN}[ INFO ] Tmp tag ${YELLOW}$tmp_tag${CYAN} for commit ${YELLOW}$commit${CYAN} not empty${BLANK}"
+              if [ "$GITHUB_SHA" != "$commit" ]
               then
-                last_tag="$tmp_tag"
-                echo -e "${CYAN}[ INFO ] Tag ${YELLOW}$last_tag${CYAN} found at commit ${YELLOW}$commit${BLANK}"
+                if [[ "$tmp_tag" =~ ^${COMPONENT}-v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
+                then
+                  last_tag="$tmp_tag"
+                  echo -e "${CYAN}[ INFO ] Tag ${YELLOW}$last_tag${CYAN} found at commit ${YELLOW}$commit${BLANK}"
+                fi
+              elif [[ "$tmp_tag" =~ ^[a-zA-Z]+-?v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
+              then
+                echo -e "${CYAN}[ INFO ] Tag ${YELLOW}$tmp_tag${CYAN} from another component found at commit ${YELLOW}$commit${BLANK}"
+              else
+                echo -e "${RED}[ ERROR ] Your current commit ${PURPLE}$GITHUB_SHA${RED} is actually your last tag ${PURPLE}$tmp_tag${RED}. Cannot perform tag on a commit already tagged.${BLANK}"
+                exit 1
               fi
-            elif [[ "$tmp_tag" =~ ^[a-zA-Z]+-?v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
-            then
-              echo -e "${CYAN}[ INFO ] Tag ${YELLOW}$tmp_tag${CYAN} from another component found at commit ${YELLOW}$commit${BLANK}"
-            else
-              echo -e "${RED}[ ERROR ] Your current commit ${PURPLE}$GITHUB_SHA${RED} is actually your last tag ${PURPLE}$tmp_tag${RED}. Cannot perform tag on a commit already tagged.${BLANK}"
-              exit 1
-            fi
+            done
           fi
         done
 
