--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -77,7 +77,7 @@ runs:
                 if [[ "$tmp_tag" =~ ^${COMPONENT}-v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
                 then
                   last_tag="$tmp_tag"
-                  echo -e "${CYAN}[ INFO ] Tag ${YELLOW}$last_tag${CYAN} found at commit ${YELLOW}$commit${BLANK}"
+                  echo -e "${CYAN}[ INFO ] Tag ${RED}$last_tag${CYAN} found at commit ${RED}$commit${BLANK}"
                 fi
               elif [[ "$tmp_tag" =~ ^[a-zA-Z]+-?v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
               then
