--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -86,10 +86,10 @@ runs:
                 then
                   last_tag="$tmp_tag"
                   echo -e "${CYAN}[ INFO ] Tag ${RED}$last_tag${CYAN} found at commit ${RED}$commit${BLANK}"
+                elif [[ "$tmp_tag" =~ ^[a-zA-Z]+-v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
+                then
+                  echo -e "${CYAN}[ INFO ] Tag ${YELLOW}$tmp_tag${CYAN} from another component found at commit ${YELLOW}$commit${BLANK}"
                 fi
-              elif [[ "$tmp_tag" =~ ^[a-zA-Z]+-?v?([0-9]+\.[0-9]+\.)([0-9]+)$ ]]
-              then
-                echo -e "${CYAN}[ INFO ] Tag ${YELLOW}$tmp_tag${CYAN} from another component found at commit ${YELLOW}$commit${BLANK}"
               else
                 echo -e "${RED}[ ERROR ] Your current commit ${PURPLE}$GITHUB_SHA${RED} is actually your last tag ${PURPLE}$tmp_tag${RED}. Cannot perform tag on a commit already tagged.${BLANK}"
                 exit 1
