--- a/.github/actions/set-version/action.yaml
+++ b/.github/actions/set-version/action.yaml
@@ -26,7 +26,7 @@ runs:
       if [[ "$GITHUB_REF_NAME" =~ ^(release\/)([0-9]+\.[0-9]+)$ ]]
       then
         # Defaulting to maj.min.0
-        if [[ -n ${{ inputs.component }} ]]
+        if [[ -n "${{ inputs.component }}" ]]
         then
           COMPONENT=${{ inputs.component }}
           echo -e "${CYAN}[ INFO ] finding tag for component ${COMPONENT}${BLANK}"
