--- a/.github/actions/buildkit/action.yaml
+++ b/.github/actions/buildkit/action.yaml
@@ -160,7 +160,7 @@ runs:
 
       if [[ "${{ inputs.custom-login }}" = true || "${{ inputs.docker-hub-login }}" = true ]]
       then
-        if [[ ${{ inputs.login-binary }} = "docker" ]]
+        if [[ "${{ inputs.login-binary }}" = "docker" ]]
         then
           export DOCKER_CONFIG=/root/.docker
           mkdir -p ${DOCKER_CONFIG}
@@ -171,13 +171,13 @@ runs:
         else
           export CONFIG_FILE="~/.docker/config.json"
         fi
-        if [[ ${{ inputs.custom-login }} = true ]]
+        if [[ "${{ inputs.custom-login }}" = true ]]
         then
           echo -e "${CYAN}[ INFO ] > Login to ${{ inputs.login-registry }} as user ${{ inputs.login-registry-user }}${BLANK}"
           ${{ inputs.login-binary }} login ${{ inputs.login-registry }} -u ${{ inputs.login-registry-user }} -p ${{ inputs.login-registry-pwd }} ${ARGS}
           assert_result "Login"
         fi
-        if [[ ${{ inputs.docker-hub-login }} = true ]]
+        if [[ "${{ inputs.docker-hub-login }}" = true ]]
         then
           echo -e "${CYAN}[ INFO ] > Login to docker.io as user ${{ inputs.docker-io-user }}${BLANK}"
           ${{ inputs.login-binary }} login docker.io -u ${{ inputs.docker-io-user }} -p ${{ inputs.docker-io-pwd }} ${ARGS}
@@ -188,7 +188,7 @@ runs:
         cat "${CONFIG_FILE}" | jq -C
       fi
 
-      if [[ -n ${{ inputs.component }} ]]
+      if [[ -n "${{ inputs.component }}" ]]
       then
         CACHE_TAG="${{ inputs.component }}-cache"
         LATEST_TAG="${{ inputs.component }}-latest"
@@ -198,10 +198,10 @@ runs:
       fi
 
       CACHE_REGISTRY=$(echo ${{ inputs.cache-registry }} | sed 's/\/$//')
-      if [[ ${{ inputs.caching }} = true ]]
+      if [[ "${{ inputs.caching }}" = true ]]
       then
         echo -e "${YELLOW}[ EXECUTING ] > Executing build of ${PURPLE}${{ inputs.img-name }}:${{ inputs.tag}}${YELLOW}${BLANK}"
-        if [[ ${{ inputs.push }} = true ]]
+        if [[ "${{ inputs.push }}" = true ]]
         then
           echo -e "${CYAN}[ INFO ] > Push mode on. Pushing image ${PURPLE}${{ inputs.img-name }}:${{ inputs.tag}}${YELLOW} to registry ${{ inputs.cache-registry }}${BLANK}"
           buildctl-daemonless.sh build \
