--- a/.github/actions/buildkit/action.yaml
+++ b/.github/actions/buildkit/action.yaml
@@ -110,7 +110,7 @@ runs:
       }
 
       who=$(whoami)
-      if [[ ${who} != "root" ]]
+      if [[ "${who}" != "root" ]]
       then
         echo -e "${CYAN}[ INFO ] > User is not root --> ${who} ${BLANK}"
         BUILDKITD_FLAGS+=" --oci-worker-no-process-sandbox"
@@ -127,17 +127,17 @@ runs:
       export BUILDKITD_FLAGS=${BUILDKITD_FLAGS}
       echo -e "${CYAN}[ INFO ] > Displaying Buildkit BUILDKITD_FLAGS --> ${BUILDKITD_FLAGS} ${BLANK}"
 
-      if [[ ${{ inputs.github-api-auth }} = true ]]
+      if [[ "${{ inputs.github-api-auth }}" = true ]]
       then
         echo -e "${CYAN}[ INFO ] > Authenticating to Github API${BLANK}"
         curl -sSfL -H "Authorization: token ${{ inputs.github-api-rest-token }}" https://api.github.com
       fi
 
-      if [[ ${{ inputs.compression-format }} = "docker-archive" ]]
+      if [[ "${{ inputs.compression-format }}" = "docker-archive" ]]
       then
         echo -e "${CYAN}[ INFO ] > Using docker format build${BLANK}"
         export COMPRESSION_FORMAT=docker
-      elif [[ ${{ inputs.compression-format }} = "oci-archive" ]]
+      elif [[ "${{ inputs.compression-format }}" = "oci-archive" ]]
       then
         echo -e "${CYAN}[ INFO ] > Using oci format build${BLANK}"
         export COMPRESSION_FORMAT=oci
@@ -185,7 +185,10 @@ runs:
           cat ${CONFIG_FILE}  | jq '(.auths |= (. + {"https://index.docker.io/v1/":."docker.io"}|del(."docker.io")))' | sponge ${CONFIG_FILE}
         fi
         # ln "${CONFIG_FILE}" ${DOCKER_CONFIG}
-        cat "${CONFIG_FILE}" | jq -C
+        if [[ -f "${CONFIG_FILE}" ]]
+        then
+          cat "${CONFIG_FILE}" | jq -C
+        fi
       fi
 
       if [[ -n "${{ inputs.component }}" ]]
@@ -198,7 +201,7 @@ runs:
       fi
 
       CACHE_REGISTRY=$(echo ${{ inputs.cache-registry }} | sed 's/\/$//')
-      if [[ "${{ inputs.caching }}" = true ]]
+      if [[ "${{ inputs.caching }}" = true && "${{ inputs.cache-registry }}" != "" ]]
       then
         echo -e "${YELLOW}[ EXECUTING ] > Executing build of ${PURPLE}${{ inputs.img-name }}:${{ inputs.tag}}${YELLOW}${BLANK}"
         if [[ "${{ inputs.push }}" = true ]]
@@ -230,7 +233,7 @@ runs:
           assert_result "${{ inputs.img-name }}:${{ inputs.tag}} build"
         fi
       else
-        echo -e "${CYAN}[ INFO ] > No caching option activated, no push mode activated${BLANK}"
+        echo -e "${CYAN}[ INFO ] > No caching option activated (or no caching registry provided), no push mode activated${BLANK}"
         echo -e "${YELLOW}[ EXECUTING ] > Executing build of ${{ inputs.img-name }}:${{ inputs.tag}} with buildkit${BLANK}"
         buildctl-daemonless.sh build \
                               --frontend=${{ inputs.dockerfile-frontend }} \
